# playwright-cloudflare

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: audit_ci.py  basic_stealth.py  fingerprint_profile.py  persistent_context.py  persistent_context_yt.py  preset_example.py  sync_example.py
src/pw_stealth/: __init__.py  audit.py  cli.py  fingerprint.py  presets.py  pytest_plugin.py  stealth.py  sync_stealth.py
tests/: test_audit.py  test_cli.py  test_fingerprint.py  test_presets.py  test_pytest_plugin.py  test_stealth_config.py  test_sync_config.py
